Sound & Display updates
Added better sound support (volume, stop tracks, etc.)
Added display overrides and writing

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,14 +1,19 @@
-[env:gd32f470vit6]
-; Corrected URL for the Community GD32 platform
-platform = https://github.com/CommunityGD32Cores/platform-gd32/archive/refs/heads/main.zip
+[platformio]
+# Pulls in local overrides from a folder ignored by git
+extra_configs = private/*.ini
 
+[env:gd32f470vit6]
+platform = https://github.com/CommunityGD32Cores/platform-gd32/archive/refs/heads/main.zip
 board = genericGD32F470VI
 framework = spl
 upload_protocol = stlink
 debug_tool = stlink
 monitor_speed = 115200
 
-build_flags =
+# Required to stabilize the connection for Dual-Bank (Bank 0 / Bank 1) writing
+upload_command = openocd -d2 -s $PROJECT_PACKAGES_DIR/tool-openocd-gd32/scripts -f interface/stlink.cfg -c "transport select hla_swd" -c "set CPUTAPID 0" -f target/stm32f4x.cfg -c "program {.pio/build/gd32f470vit6/firmware.elf} verify reset; shutdown;"
+
+
+build_flags = 
     -L$PROJECT_DIR/lib
     -lc
-
